[gd_scene load_steps=4 format=3 uid="uid://dialogue_ui_scene"]

[ext_resource path="res://DialogueUI.gd" type="Script" id=1]

[node name="DialogueUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DialogueBox" type="Panel" parent="."]
margin_left = 100.0
margin_top = 400.0
margin_right = 900.0
margin_bottom = 580.0
custom_styles/panel = StyleBoxFlat {
    bg_color = Color(0, 0, 0, 0.8)
    border_width_all = 2
    border_color = Color(1, 1, 1)
}

[node name="NameLabel" type="Label" parent="DialogueBox"]
margin_left = 20.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 40.0
text = ""
custom_fonts/font = DynamicFont {
    size = 20
}

[node name="DialogueText" type="Label" parent="DialogueBox"]
margin_left = 20.0
margin_top = 50.0
margin_right = 780.0
margin_bottom = 150.0
text = ""
autowrap = true
custom_fonts/font = DynamicFont {
    size = 18
}

[node name="NextButton" type="Button" parent="DialogueBox"]
margin_left = 700.0
margin_top = 130.0
margin_right = 780.0
margin_bottom = 170.0
text = "Next"
on_pressed = Script.on_NextButton_pressed
